# CarpTMS

./: .env  .gitignore  DEPLOY.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  create_indexes.sql  deploy.sh  docker-compose.yml  fix_passwords_p0.sql  grafana_dashboard.json  migrate_user_fields.sql  package-lock.json  pgpass.conf  quick_password_fix.sql  reset_passwords.sql  start-with-ai.bat  start_backend.sh  start_server.ps1  start_server_offline.ps1  stop-windows-prod.bat  sync_config.json  verify-database.sql  verify_passwords.sql
My_server/: .env.example  .env.production  Cargo.toml  Dockerfile  Dockerfile.prod  PROBLEM_REPORT.md  TRANSLATION_GUIDE.md  docker-compose.microservices.yml  docker-compose.yml  prometheus.yml  test_data.txt
My_server/.cargo/: config.toml
My_server/benches/: api_benchmark.rs  config_center_benchmark.rs  health_benchmark.rs  mod.rs  performance_benchmark.rs  secret_manager_benchmark.rs
My_server/config/: micro_ddd.yaml  monolith_ddd.yaml  security.toml  tracing.toml
My_server/config/alertmanager/: carptms_alerts.yml
My_server/config/grafana/: carptms_dashboard.json
My_server/deploy/: docker-compose.yml  promtail-config.yaml
My_server/deploy/grafana/: dashboard_websocket.json
My_server/deploy/helm/: values-postgres.yaml  values-redis.yaml  values.yaml
My_server/deploy/istio/: istio.yaml
My_server/deploy/kubernetes/: deployment.yaml
My_server/deploy/loki/: loki-config.yaml
My_server/deploy/prometheus/: prometheus.yml
My_server/docs/: ARCHITECTURE_DECISIONS.md  CODE_COMPLEXITY_ANALYSIS.md  DDD_ARCHITECTURE_GUIDE.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY_PLAN.md  MICROSERVICES_ARCHITECTURE.md  database_evolution_roadmap.md  dependency_analysis.md  real_time_location_storage_design.md  sharding_and_caching_strategy.md
My_server/etc/: filebeat.elkeid.yml
My_server/etc/elkeid-rules/: carptms_anomaly.yaml  carptms_behaviour.yaml
My_server/examples/: performance_benchmark.rs
My_server/generate_hash/: Cargo.toml
My_server/generate_hash/src/: main.rs
My_server/generate_password/: Cargo.toml
My_server/generate_password/src/: main.rs
My_server/k8s/: deployment.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
My_server/map/: 2014.gst
My_server/migrations/: 01_create_vehicles_table.sql  02_create_orders_tables.sql  02_import_legacy_vehicles.rs  03_create_other_tables.sql  04_optimize_database.sql  05_create_logistics_tracks.sql  06_partition_logistics_tracks.sql  07_enable_postgis_and_optimize.sql  08_optimize_query_performance.sql  09_implement_hot_cold_data_separation.sql  10_add_vehicles_indexes.sql  11_add_weighing_data_indexes.sql  12_fix_schema.sql  13_fix_schema_v2.sql  14_fix_users_table.sql  15_optimize_query_indexes.sql  16_create_departments_table.sql  17_fix_roles_and_create_tables.sql  18_create_organizations_table.sql  19_create_openapi_platforms_table.sql  19_create_system_settings_table.sql  20_create_audit_logs_table.sql  20_create_location_tables.sql  21_add_department_to_users.sql  22_quick_migrate.sql  23_create_alerts_table.sql  24_create_organization_settings_table.sql  25_add_organization_to_users.sql  26_database_optimization.sql  27_add_missing_indexes.sql  28_create_finance_tables.sql  29_create_statistics_table.sql  30_database_optimization.sql
My_server/nginx/: proxy_params.conf
My_server/postgres/: init_master.sh  init_slave.sh
My_server/prometheus/: alertmanager.yml  prometheus.yml
My_server/prometheus/alerts/: business.yml  carptms_business.yml  infrastructure.yml  microservices.yml  rules.yml
My_server/prometheus/targets/: microservices.json
My_server/prometheus/templates/: alerts.tmpl
My_server/proto/: carptms.proto
My_server/scripts/: backup_db.sh  backup_strategy.sh  build.sh  disaster_recovery_test.sh  gray_release.sh  security_scan.sh  start_microservices.ps1  start_microservices.sh  test.sh
My_server/sql-scripts/: truck_scale_schema.sql
My_server/src/: alert.rs  check_db.rs  db_init.rs  fix_load_balancing.rs  health_test.rs  integration_tests.rs  lib.rs  load_balancing.rs  logging.rs  main.rs  map_service.rs  metrics.rs  models.rs  monitoring.rs  redis.rs  schemas.rs  server_init.rs  telemetry.rs  tracing.rs
My_server/src/ai/: adaptive.rs  candle_backend.rs  coder.rs  deepseek.rs  mod.rs  request_router.rs  resource.rs  routes.rs  v3.rs
My_server/src/ansible/: executor.rs  inventory.rs  mod.rs  models.rs  routes.rs
My_server/src/api/: alarms.rs  cache.rs  jt1078_device.rs  jt808_command.rs  mod.rs  sensors.rs  trajectory.rs
My_server/src/app/: mod.rs
My_server/src/application/: application_tests.rs  mod.rs
My_server/src/background/: mod.rs
My_server/src/bff/: check_errors.py  datasources.rs  export.rs  mod.rs  models.rs  monitored_services.rs  optimization.rs  realtime.rs  reports.rs  routes.rs  services.rs  templates.rs  tests.rs  weighing_api_test.rs
My_server/src/blockchain/: mod.rs  routes.rs
My_server/src/bootstrap/: config_loader.rs  config_test.rs  gateways.rs  micro_ddd.rs  mod.rs  monitoring.rs  monolith_ddd.rs  routes.rs  server.rs  services.rs  services_test.rs  sync.rs
My_server/ssl/: generate_certs.sh
My_server/tests/: load_testing.md  vehicles_test.rs  weighing_test.rs
(+834 files in other folders)
