[package]
name = "carptms_server"
version = "1.1.0"
edition = "2021"
authors = ["CarpTMS Team"]
description = "CarpTMS 车联网运输管理系统 - 货运版稳定版"
license = "Apache-2.0"
repository = "https://github.com/your-repo/CarpTMS"
rust-version = "1.94"
default-run = "carptms_server"
keywords = ["tms", "fleet-management", "iot", "vehicle-tracking", "video-streaming"]
categories = ["web-programming", "network-programming"]

[lib]
name = "carptms"
path = "src/lib.rs"

[[bin]]
name = "carptms_server"
path = "src/main.rs"

[[bin]]
name = "db_init"
path = "src/db_init.rs"

[features]
# 默认启用 AI 模块（CPU 模式）
# 编译模式: cargo build (CPU) / cargo build --features ai-gpu (GPU) / cargo build --features ai-full
default = ["ai"]

# 远程运维模块 - 需要 russh 库支持
remote-ops = [
    "dep:russh",
    "dep:russh-keys",
    "dep:socket2",
    "dep:tar",
    "dep:xz2",
]

# Jaeger 追踪支持
jaeger = []

# GoldenDB 支持
goldendb = []

# ===== AI 模块特性 =====
# ai: 统一 AI 功能开关（被 ai-gpu / ai-full 隐式启用）
# ai-gpu: 启用 CUDA GPU 加速
# ai-full: 启用完整 AI 功能（GPU + 全部可选模型）

ai = [
    "dep:candle-core",
    "dep:candle-transformers",
    "dep:candle-nn",
    "dep:hf-hub",
    "dep:tokenizers",
]

ai-gpu = [
    "ai",
    "candle-core/cuda",
    "candle-transformers/cuda",
    "candle-nn/cuda",
]

ai-full = [
    "ai-gpu",
]

[dependencies]
# Web 框架
actix = "0.13"
actix-web = "4"
actix-rt = "2"
actix-service = "2"
actix-cors = "0.7"
actix-session = "0.9"
actix-files = "0.6"

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
pin-project-lite = "0.2"

# 数据库 - 支持 PostgreSQL 和 GoldenDB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "uuid", "chrono", "json", "rust_decimal", "bigdecimal", "migrate"] }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# WebSocket
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_regex = "1.1"
toml = "0.8"
hostname = "0.4"
dotenv = "0.15"
env_logger = "0.11"

# OpenAPI 文档
utoipa = "4"
utoipa-swagger-ui = "6"

# 认证与安全
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
bcrypt = "0.16"
bcrypt-pbkdf = "0.10"

# 配置
config = "0.14"
dotenvy = "0.15"

# 错误处理
thiserror = "2"
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
tracing-actix-web = "0.7"
log = "0.4"

# OpenTelemetry 链路追踪
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.2", optional = true }
tracing-opentelemetry = "0.22"

# 认证
actix-web-httpauth = "0.8"

# WebSocket actors
actix-web-actors = "4"

# 指标
prometheus = "0.13"

# 系统监控
sysinfo = "0.32"

# 编码
encoding_rs = "0.8"

# 数值计算
num-traits = "0.2"

# 模板引擎
tera = "1.20"

# 序列化
simd-json = "0.14"

# Base64
base64 = "0.22"

# 加密
aes-gcm = "0.10"
ring = "0.17"
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# 验证
validator = { version = "0.18", features = ["derive"] }

# Redis
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 日期时间
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }

# 远程运维 - SSH（仅 remote-ops feature）
# 注意：russh 0.45 使用的 rsa 库有 Marvin Attack 漏洞 (RUSTSEC-2023-0071)
# 启用此 feature 时，建议使用 Ed25519 密钥替代 RSA 密钥，或等待库更新
russh = { version = "0.45", optional = true }
russh-keys = { version = "0.45", optional = true }
socket2 = { version = "0.5", optional = true }

# 本地构建模块（仅 remote-ops feature）
tar = { version = "0.4", optional = true }
xz2 = { version = "0.1", optional = true }

# 压缩和文件处理 - 常规依赖（被 disaster_recovery 和 truck_scale 使用）
flate2 = "1"
glob = "0.3"

# 压缩
zstd = "0.13"
brotli = "7"

# Excel 导出
simple-xlsx-writer = "0.1"
parking_lot = "0.12"
once_cell = "1"
regex = "1"
lazy_static = "1"
bytes = "1"
byteorder = "1"
hex = "0.4"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
data-encoding = "2.5"
bitflags = "2"
ahash = "0.8"
directories = "6"
rustversion = "1"
regex-lite = "0.1"

# AI 本地推理 - HuggingFace Candle（纯 Rust，零 C 工具链依赖）
# 完美适配 ARM/龙芯/申威等国产信创平台
candle-core = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
hf-hub = { version = "0.4", optional = true }
# HuggingFace tokenizers
tokenizers = { version = "0.21", optional = true }

[dev-dependencies]
actix-rt = "2"
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.4"
criterion = "0.5"
serial_test = "3"
bytes = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package]
proptest = { opt-level = 0 }
criterion = { opt-level = 0 }
